--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "npm-lib-template",
+  "name": "weapp-tailwindcss-webpack-plugin",
   "version": "1.0.0",
-  "description": "npm-lib-template",
+  "description": "weapp-tailwindcss-webpack-plugin",
   "main": "dist/index.js",
-  "module": "dist/index.es.js",
   "types": "dist/types/index.d.ts",
   "scripts": {
     "dev": "cross-env NODE_ENV=development rollup -cw",
@@ -15,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sonofmagic/npm-lib-template.git"
+    "url": "git+https://github.com/sonofmagic/weapp-tailwindcss-webpack-plugin.git"
   },
   "files": [
     "dist"
@@ -28,9 +27,9 @@
   "author": "SonOfMagic <qq1324318532@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/sonofmagic/npm-lib-template/issues"
+    "url": "https://github.com/sonofmagic/weapp-tailwindcss-webpack-plugin/issues"
   },
-  "homepage": "https://github.com/sonofmagic/npm-lib-template#readme",
+  "homepage": "https://github.com/sonofmagic/weapp-tailwindcss-webpack-plugin#readme",
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.8",
     "@rollup/plugin-commonjs": "^21.0.1",
@@ -40,6 +39,7 @@
     "@tsconfig/recommended": "^1.0.1",
     "@types/jest": "^27.0.2",
     "@types/node": "^17.0.5",
+    "@types/tailwindcss": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "cross-env": "^7.0.3",
@@ -51,9 +51,11 @@
     "eslint-plugin-promise": "6.0.0",
     "jest": "^27.4.5",
     "rollup": "^2.62.0",
+    "tailwindcss": "^3.0.15",
     "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "webpack": "^5.66.0"
   }
 }
