--- a/package.json
+++ b/package.json
@@ -58,5 +58,8 @@
     "tslib": "^2.3.1",
     "typescript": "^4.5.4",
     "webpack": "^5.66.0"
+  },
+  "dependencies": {
+    "chalk": "^5.0.0"
   }
 }
