--- a/demo/html/package.json
+++ b/demo/html/package.json
@@ -16,7 +16,13 @@
     "@types/node": "^17.0.10",
     "@types/webpack": "^5.28.0",
     "autoprefixer": "^10.4.2",
+    "css-loader": "^6.5.1",
+    "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.5",
+    "postcss-loader": "^6.2.1",
+    "sass": "^1.49.0",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5",
