feat: commit codes and prepare for success

--- a/demo/html/package.json
+++ b/demo/html/package.json
@@ -18,8 +18,10 @@
     "autoprefixer": "^10.4.2",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.5.2",
     "postcss": "^8.4.5",
     "postcss-loader": "^6.2.1",
+    "postcss-selector-parser": "^6.0.9",
     "sass": "^1.49.0",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
