feat: commit postcss 7 config

--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -64,9 +64,12 @@
     "@dcloudio/uni-quickapp-webview": "^2.0.1-33920220121003",
     "@dcloudio/uni-stat": "^2.0.1-33920220121003",
     "@vue/shared": "^3.0.0",
+    "autoprefixer": "9",
     "core-js": "^3.6.5",
     "flyio": "^0.6.2",
+    "postcss": "7",
     "regenerator-runtime": "^0.12.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue": "^2.6.11",
     "vue-class-component": "^6.3.2",
     "vue-property-decorator": "^8.0.0",
@@ -95,6 +98,7 @@
     "mini-types": "*",
     "miniprogram-api-typings": "*",
     "postcss-comment": "^2.0.0",
+    "postcss-rem-to-responsive-pixel": "^5.0.2",
     "typescript": "^3.0.0",
     "vue-template-compiler": "^2.6.11"
   },
