--- a/demo/uni-app/src/manifest.json
+++ b/demo/uni-app/src/manifest.json
@@ -49,7 +49,7 @@
     },
     "mp-weixin": { /* 小程序特有相关 */
         "usingComponents":true,
-        "appid": "",
+        "appid": "wxb3d842a4a7e3440d",
         "setting" : {
         	"urlCheck" : true
         }
