--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "@tsconfig/recommended": "^1.0.1",
     "@types/jest": "^27.0.2",
     "@types/node": "^17.0.5",
+    "@types/semver": "^7.3.9",
     "@types/tailwindcss": "^3.0.2",
+    "@types/webpack-sources": "^3.2.0",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "cross-env": "^7.0.3",
@@ -51,15 +53,17 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "6.0.0",
     "jest": "^27.4.5",
+    "postcss": "^8.4.5",
     "rollup": "^2.62.0",
+    "semver": "^7.3.5",
     "tailwindcss": "^3.0.15",
     "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4",
-    "webpack": "^5.66.0"
+    "webpack": "^5.66.0",
+    "webpack-sources": "^3.2.3",
+    "webpack4": "npm:webpack@webpack-4"
   },
-  "dependencies": {
-    "postcss": "^8.4.5"
-  }
+  "dependencies": {}
 }
