--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "@types/node": "^17.0.5",
     "@types/semver": "^7.3.9",
     "@types/tailwindcss": "^3.0.2",
+    "@types/webpack": "^5.28.0",
     "@types/webpack-sources": "^3.2.0",
+    "@types/webpack4": "npm:@types/webpack@4",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "cross-env": "^7.0.3",
