feat: commit webpack v4 plugin

--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "npm run dev:h5",
-    "dev":"npm run dev:mp-weixin",
-    "build": "npm run build:h5",
+    "dev": "npm run dev:mp-weixin",
+    "build": "npm run build:mp-weixin",
     "build:app-plus": "cross-env NODE_ENV=production UNI_PLATFORM=app-plus vue-cli-service uni-build",
     "build:custom": "cross-env NODE_ENV=production uniapp-cli custom",
     "build:h5": "cross-env NODE_ENV=production UNI_PLATFORM=h5 vue-cli-service uni-build",
@@ -100,6 +100,8 @@
     "miniprogram-api-typings": "*",
     "postcss-comment": "^2.0.0",
     "postcss-rem-to-responsive-pixel": "^5.0.2",
+    "sass": "^1.49.0",
+    "sass-loader": "8",
     "typescript": "^3.0.0",
     "vue-template-compiler": "^2.6.11"
   },
