--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -90,6 +90,7 @@
     "@dcloudio/vue-cli-plugin-uni-optimize": "^2.0.1-33920220121003",
     "@dcloudio/webpack-uni-mp-loader": "^2.0.1-33920220121003",
     "@dcloudio/webpack-uni-pages-loader": "^2.0.1-33920220121003",
+    "@types/tailwindcss": "^3.0.5",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-typescript": "*",
     "@vue/cli-service": "~4.5.0",
