fix: variable problem fix

--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
   },
   "homepage": "https://github.com/sonofmagic/weapp-tailwindcss-webpack-plugin#readme",
   "devDependencies": {
+    "@babel/parser": "^7.17.0",
+    "@babel/traverse": "^7.17.0",
+    "@babel/types": "^7.17.0",
     "@icebreakers/wxml": "^1.0.0",
     "@rollup/plugin-alias": "^3.1.8",
     "@rollup/plugin-commonjs": "^21.0.1",
