--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weapp-tailwindcss-webpack-plugin",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "weapp-tailwindcss-webpack-plugin",
   "main": "dist/index.js",
   "types": "dist/types/index.d.ts",
@@ -73,6 +73,7 @@
     "jest": "^27.4.5",
     "postcss": "^8.4.5",
     "rollup": "^2.62.0",
+    "rollup-plugin-terser": "^7.0.2",
     "semver": "^7.3.5",
     "tailwindcss": "^3.0.15",
     "ts-jest": "^27.1.2",
