--- a/package.json
+++ b/package.json
@@ -44,9 +44,7 @@
   },
   "homepage": "https://github.com/sonofmagic/weapp-tailwindcss-webpack-plugin#readme",
   "devDependencies": {
-    "@babel/parser": "^7.17.0",
     "@babel/traverse": "^7.17.0",
-    "@babel/types": "^7.17.0",
     "@icebreakers/wxml": "^1.0.0",
     "@rollup/plugin-alias": "^3.1.8",
     "@rollup/plugin-commonjs": "^21.0.1",
@@ -55,34 +53,37 @@
     "@rollup/plugin-typescript": "^8.3.0",
     "@tsconfig/recommended": "^1.0.1",
     "@types/jest": "^27.0.2",
-    "@types/node": "^17.0.5",
+    "@types/node": "^17.0.14",
     "@types/semver": "^7.3.9",
-    "@types/tailwindcss": "^3.0.2",
+    "@types/tailwindcss": "^3.0.5",
     "@types/webpack": "^5.28.0",
     "@types/webpack-sources": "^3.2.0",
     "@types/webpack4": "npm:@types/webpack@4",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
-    "@typescript-eslint/parser": "^5.8.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
     "cross-env": "^7.0.3",
     "del": "^6.0.0",
-    "eslint": "8.6.0",
+    "eslint": "8.8.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "6.0.0",
     "jest": "^27.4.5",
-    "postcss": "^8.4.5",
-    "rollup": "^2.62.0",
+    "postcss": "^8.4.6",
+    "rollup": "^2.67.0",
     "rollup-plugin-terser": "^7.0.2",
     "semver": "^7.3.5",
-    "tailwindcss": "^3.0.15",
+    "tailwindcss": "^3.0.18",
     "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.4",
-    "webpack": "^5.66.0",
-    "webpack-sources": "^3.2.3",
+    "typescript": "^4.5.5",
+    "webpack": "^5.68.0",
     "webpack4": "npm:webpack@webpack-4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "webpack-sources": "^3.2.3",
+    "@babel/types": "^7.17.0",
+    "@babel/parser": "^7.17.0"
+  }
 }
