--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weapp-tailwindcss-webpack-plugin",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "weapp-tailwindcss-webpack-plugin",
   "main": "dist/index.js",
   "types": "dist/types/index.d.ts",
@@ -44,6 +44,7 @@
   },
   "homepage": "https://github.com/sonofmagic/weapp-tailwindcss-webpack-plugin#readme",
   "devDependencies": {
+    "@babel/types": "^7.17.0",
     "@icebreakers/wxml": "^1.0.0",
     "@rollup/plugin-alias": "^3.1.8",
     "@rollup/plugin-commonjs": "^21.0.1",
@@ -78,8 +79,7 @@
     "tslib": "^2.3.1",
     "typescript": "^4.5.5",
     "webpack": "^5.68.0",
-    "webpack4": "npm:webpack@webpack-4",
-    "@babel/types": "^7.17.0"
+    "webpack4": "npm:webpack@webpack-4"
   },
   "dependencies": {
     "@babel/generator": "^7.17.0",
