--- a/demo/taro-app/project.tt.json
+++ b/demo/taro-app/project.tt.json
@@ -1,9 +1,13 @@
 {
   "miniprogramRoot": "./",
-  "projectname": "taro-app",
-  "appid": "testAppId",
+  "projectname": "myApp",
+  "description": "ge",
+  "appid": "touristappid",
   "setting": {
+    "urlCheck": true,
     "es6": false,
+    "postcss": false,
     "minified": false
-  }
+  },
+  "compileType": "miniprogram"
 }
