--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "taro-app",
+  "name": "taro-react",
   "version": "1.0.0",
   "private": true,
-  "description": "react demo",
+  "description": "ge",
   "templateInfo": {
-    "name": "default",
+    "name": "taro-hooks",
     "typescript": true,
     "css": "sass"
   },
@@ -36,29 +36,34 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
+    "@tarojs/cli": "3.4.1",
     "@tarojs/components": "3.4.1",
+    "@tarojs/react": "3.4.1",
     "@tarojs/runtime": "3.4.1",
     "@tarojs/taro": "3.4.1",
-    "@tarojs/plugin-framework-react": "3.4.1",
-    "@tarojs/react": "3.4.1",
-    "react-dom": "^17.0.0",
-    "react": "^17.0.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "taro-hooks": "latest"
   },
   "devDependencies": {
-    "@types/webpack-env": "^1.13.6",
-    "@types/react": "^17.0.2",
-    "@tarojs/mini-runner": "3.4.1",
     "@babel/core": "^7.8.0",
+    "@tarojs/mini-runner": "3.4.1",
     "@tarojs/webpack-runner": "3.4.1",
+    "@types/react": "^17.0.2",
+    "@types/webpack-env": "^1.13.6",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
+    "babel-plugin-import": "^1.13.3",
     "babel-preset-taro": "3.4.1",
+    "eslint": "^8.8.0",
     "eslint-config-taro": "3.4.1",
-    "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "stylelint": "9.3.0",
-    "@typescript-eslint/parser": "^4.15.1",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "typescript": "^4.1.0"
+    "stylelint": "14.3.0",
+    "typescript": "^4.2.3"
+  },
+  "engines": {
+    "node": ">=12.0.0"
   }
 }
