--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -3,12 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "description": "ge",
-  "templateInfo": {
-    "name": "taro-hooks",
-    "typescript": true,
-    "css": "sass"
-  },
   "scripts": {
+    "dev": "npm run dev:weapp",
     "build:weapp": "taro build --type weapp",
     "build:swan": "taro build --type swan",
     "build:alipay": "taro build --type alipay",
@@ -53,6 +49,7 @@
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
+    "autoprefixer": "^10.4.2",
     "babel-plugin-import": "^1.13.3",
     "babel-preset-taro": "3.4.1",
     "eslint": "^8.8.0",
@@ -60,7 +57,9 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "postcss": "^8.4.6",
     "stylelint": "14.3.0",
+    "tailwindcss": "^3.0.18",
     "typescript": "^4.2.3"
   },
   "engines": {
