--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "cross-env": "^7.0.3",
+    "defu": "^5.0.1",
     "del": "^6.0.0",
     "eslint": "8.8.0",
     "eslint-config-standard": "^16.0.3",
