--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "6.0.0",
     "jest": "^27.4.5",
+    "quick-lru": "^5.1.1",
     "rollup": "^2.67.0",
     "rollup-plugin-terser": "^7.0.2",
     "semver": "^7.3.5",
