--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -37,25 +37,28 @@
   "dependencies": {
     "@babel/runtime": "^7.7.7",
     "@tarojs/components": "3.4.1",
+    "@tarojs/plugin-framework-vue2": "3.4.1",
     "@tarojs/runtime": "3.4.1",
     "@tarojs/taro": "3.4.1",
-    "@tarojs/plugin-framework-vue2": "3.4.1",
-    "vue-template-compiler": "^2.5.0",
-    "vue": "^2.5.0"
+    "vue": "^2.5.0",
+    "vue-template-compiler": "^2.5.0"
   },
   "devDependencies": {
-    "@types/webpack-env": "^1.13.6",
-    "@tarojs/mini-runner": "3.4.1",
     "@babel/core": "^7.8.0",
+    "@tarojs/mini-runner": "3.4.1",
     "@tarojs/webpack-runner": "3.4.1",
-    "babel-preset-taro": "3.4.1",
-    "vue-loader": "^15.9.2",
-    "eslint-plugin-vue": "^6.x",
-    "eslint-config-taro": "3.4.1",
-    "eslint": "^6.8.0",
-    "stylelint": "9.3.0",
-    "@typescript-eslint/parser": "^4.15.1",
+    "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "typescript": "^4.1.0"
+    "@typescript-eslint/parser": "^4.15.1",
+    "autoprefixer": "^10.4.2",
+    "babel-preset-taro": "3.4.1",
+    "eslint": "^6.8.0",
+    "eslint-config-taro": "3.4.1",
+    "eslint-plugin-vue": "^6.x",
+    "postcss": "^8.4.6",
+    "stylelint": "9.3.0",
+    "tailwindcss": "^3.0.21",
+    "typescript": "^4.1.0",
+    "vue-loader": "^15.9.2"
   }
 }
