--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -13,7 +13,7 @@
     "build:qq": "taro build --type qq",
     "build:jd": "taro build --type jd",
     "build:quickapp": "taro build --type quickapp",
-    "dev": "npm run build:weapp -- --watch",
+    "dev:weapp": "npm run build:weapp -- --watch",
     "dev:swan": "npm run build:swan -- --watch",
     "dev:alipay": "npm run build:alipay -- --watch",
     "dev:tt": "npm run build:tt -- --watch",
@@ -30,7 +30,7 @@
   ],
   "author": "",
   "dependencies": {
-    "@babel/runtime": "^7.7.7",
+    "@babel/runtime": "^7.17.2",
     "@tarojs/cli": "3.4.1",
     "@tarojs/components": "3.4.1",
     "@tarojs/react": "3.4.1",
@@ -38,27 +38,27 @@
     "@tarojs/taro": "3.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "taro-hooks": "latest"
+    "taro-hooks": "1.5.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.0",
+    "@babel/core": "^7.17.4",
     "@tarojs/mini-runner": "3.4.1",
     "@tarojs/webpack-runner": "3.4.1",
     "@types/react": "^17.0.2",
     "@types/webpack-env": "^1.13.6",
-    "@typescript-eslint/eslint-plugin": "^5.10.2",
-    "@typescript-eslint/parser": "^5.10.2",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "autoprefixer": "^10.4.2",
     "babel-plugin-import": "^1.13.3",
     "babel-preset-taro": "3.4.1",
-    "eslint": "^8.8.0",
+    "eslint": "^8.9.0",
     "eslint-config-taro": "3.4.1",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^8.4.6",
-    "stylelint": "14.3.0",
-    "tailwindcss": "^3.0.18",
+    "stylelint": "14.5.1",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.2.3"
   },
   "engines": {
