--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -20,12 +20,17 @@
     "rax-view": "^2.0.0"
   },
   "devDependencies": {
-    "rax-app": "^3.8.7",
     "@iceworks/spec": "^1.0.0",
     "@types/rax": "^1.0.0",
+    "autoprefixer": "^10.4.2",
     "eslint": "^8.0.0",
+    "postcss": "^8.4.6",
+    "postcss-rem-to-responsive-pixel": "^5.1.1",
     "prettier": "^2.1.2",
-    "stylelint": "^13.7.2"
+    "rax-app": "^3.8.7",
+    "stylelint": "^13.7.2",
+    "tailwindcss": "^3.0.23",
+    "weapp-tailwindcss-webpack-plugin": "^1.1.0"
   },
   "private": true,
   "originTemplate": "@rax-materials/scaffolds-app-ts"
