--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "ts-node": "^10.5.0",
     "tslib": "^2.3.1",
     "typescript": "^4.5.5",
+    "vite": "^2.8.4",
     "webpack": "^5.69.1",
     "webpack4": "npm:webpack@webpack-4"
   },
