--- a/demo/taro-app/project.config.json
+++ b/demo/taro-app/project.config.json
@@ -1,7 +1,7 @@
 {
   "miniprogramRoot": "dist/",
-  "projectname": "myApp",
-  "description": "ge",
+  "projectname": "taro-app-react",
+  "description": "weapp-tailwindcss-webpack-plugin taro-app-react demo",
   "appid": "wxb3d842a4a7e3440d",
   "setting": {
     "urlCheck": true,
