--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -36,29 +36,29 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
-    "@tarojs/components": "3.4.1",
-    "@tarojs/plugin-framework-vue3": "3.4.1",
-    "@tarojs/runtime": "3.4.1",
-    "@tarojs/taro": "3.4.1",
+    "@tarojs/components": "3.4.2",
+    "@tarojs/plugin-framework-vue3": "3.4.2",
+    "@tarojs/runtime": "3.4.2",
+    "@tarojs/taro": "3.4.2",
     "vue": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
-    "@tarojs/mini-runner": "3.4.1",
-    "@tarojs/webpack-runner": "3.4.1",
+    "@tarojs/mini-runner": "3.4.2",
+    "@tarojs/webpack-runner": "3.4.2",
     "@types/webpack-env": "^1.13.6",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "@vue/compiler-sfc": "^3.0.0",
     "autoprefixer": "^10.4.2",
-    "babel-preset-taro": "3.4.1",
-    "eslint": "^6.8.0",
-    "eslint-config-taro": "3.4.1",
-    "eslint-plugin-vue": "^7.0.0",
+    "babel-preset-taro": "3.4.2",
+    "eslint": "^8.9.0",
+    "eslint-config-taro": "3.4.2",
+    "eslint-plugin-vue": "^8.4.1",
     "postcss": "^8.4.6",
-    "stylelint": "9.3.0",
+    "stylelint": "14.5.1",
     "tailwindcss": "^3.0.21",
     "typescript": "^4.1.0",
-    "vue-loader": "^16.0.0-beta.8"
+    "vue-loader": "^17.0.0"
   }
 }
