--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "url": "git+https://github.com/sonofmagic/weapp-tailwindcss-webpack-plugin.git"
   },
   "files": [
-    "dist"
+    "dist",
+    "postcss"
   ],
   "publishConfig": {
     "access": "public",
@@ -73,6 +74,7 @@
     "eslint-plugin-promise": "6.0.0",
     "jest": "^27.5.1",
     "postcss": "^8.4.6",
+    "postcss-load-config": "^3.1.3",
     "quick-lru": "^5.1.1",
     "rollup": "^2.67.2",
     "rollup-plugin-terser": "^7.0.2",
