--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -61,6 +61,7 @@
     "sass": "^1.49.8",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.5.2",
-    "vite": "^2.8.3"
+    "vite": "^2.8.3",
+    "weapp-tailwindcss-webpack-plugin": "^1.1.5-beta.0"
   }
 }
