--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -62,6 +62,6 @@
     "tailwindcss": "^3.0.23",
     "typescript": "^4.5.2",
     "vite": "^2.8.3",
-    "weapp-tailwindcss-webpack-plugin": "^1.1.5-beta.1"
+    "weapp-tailwindcss-webpack-plugin": "^1.1.5"
   }
 }
