feat: commit native mina demo

--- a/demo/native-mina/src/app.json
+++ b/demo/native-mina/src/app.json
@@ -1,5 +1,7 @@
 {
-  "pages": ["pages/index/index", "pages/logs/logs"],
+  "pages": [
+    "pages/index/index"
+  ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
