--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-typescript": "^7.16.7",
     "@gfez/eslint-config-wechat-miniprogram": "^1.0.1",
     "@types/lodash": "^4.14.179",
+    "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-lodash": "^3.3.4",
     "clean-webpack-plugin": "^4.0.0",
@@ -41,11 +42,14 @@
     "lodash-webpack-plugin": "^0.11.5",
     "miniprogram-api-typings": "^3.4.5",
     "npm-run-all": "^4.1.2",
+    "postcss": "^8.4.7",
+    "postcss-loader": "^6.2.1",
     "replace-ext": "^2.0.0",
     "required-path": "^1.0.1",
     "run-script-os": "^1.1.6",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.6.2",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
