--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -44,6 +44,7 @@
     "npm-run-all": "^4.1.2",
     "postcss": "^8.4.7",
     "postcss-loader": "^6.2.1",
+    "postcss-rem-to-responsive-pixel": "^5.1.1",
     "replace-ext": "^2.0.0",
     "required-path": "^1.0.1",
     "run-script-os": "^1.1.6",
@@ -51,6 +52,7 @@
     "sass-loader": "^12.6.0",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.2",
+    "weapp-tailwindcss-webpack-plugin": "^1.1.5",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
     "webpack-sources": "^3.2.3"
