--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weapp-tailwindcss-webpack-plugin",
-  "version": "1.2.0-beta.0",
+  "version": "1.1.6",
   "description": "把tailwindcss jit引擎，带给小程序开发者们\nbring tailwindcss jit engine to our miniprogram developers!",
   "main": "dist/index.js",
   "types": "dist/types/index.d.ts",
@@ -50,42 +50,42 @@
     "@babel/types": "^7.17.0",
     "@icebreakers/wxml": "^1.0.1",
     "@rollup/plugin-alias": "^3.1.8",
-    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.1",
-    "@rollup/plugin-typescript": "^8.3.0",
+    "@rollup/plugin-typescript": "^8.3.1",
     "@tsconfig/recommended": "^1.0.1",
     "@types/jest": "^27.0.2",
-    "@types/node": "^17.0.18",
+    "@types/node": "^17.0.21",
     "@types/semver": "^7.3.9",
     "@types/tailwindcss": "^3.0.8",
     "@types/webpack": "^5.28.0",
     "@types/webpack-sources": "^3.2.0",
     "@types/webpack4": "npm:@types/webpack@4",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
     "cross-env": "^7.0.3",
     "defu": "^5.0.1",
     "del": "^6.0.0",
-    "eslint": "8.9.0",
+    "eslint": "8.10.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "6.0.0",
     "jest": "^27.5.1",
-    "postcss": "^8.4.6",
+    "postcss": "^8.4.7",
     "postcss-load-config": "^3.1.3",
     "quick-lru": "^5.1.1",
-    "rollup": "^2.67.2",
+    "rollup": "^2.69.0",
     "rollup-plugin-terser": "^7.0.2",
     "semver": "^7.3.5",
     "tailwindcss": "^3.0.23",
     "ts-jest": "^27.1.2",
-    "ts-node": "^10.5.0",
+    "ts-node": "^10.6.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.5",
-    "vite": "^2.8.4",
-    "webpack": "^5.69.1",
+    "typescript": "^4.6.2",
+    "vite": "^2.8.6",
+    "webpack": "^5.70.0",
     "webpack4": "npm:webpack@webpack-4"
   },
   "dependencies": {
