--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "6.0.0",
     "jest": "^27.5.1",
+    "memfs": "^3.4.1",
     "postcss": "^8.4.7",
     "postcss-load-config": "^3.1.3",
     "quick-lru": "^5.1.1",
