--- a/demo/kbone-vue/package.json
+++ b/demo/kbone-vue/package.json
@@ -22,7 +22,7 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
+    "autoprefixer": "9",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -53,9 +53,12 @@
     "mp-webpack-plugin": "latest",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "portfinder": "^1.0.25",
+    "postcss": "7",
     "postcss-loader": "^2.0.8",
+    "postcss-rem-to-responsive-pixel": "^5.1.1",
     "reduce-loader": "^0.3.1",
     "rimraf": "^2.7.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "terser-webpack-plugin": "^2.3.0",
     "thread-loader": "^2.1.3",
     "ts-loader": "^6.2.1",
@@ -65,6 +68,7 @@
     "vue-loader": "^15.7.2",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
+    "weapp-tailwindcss-webpack-plugin": "^1.2.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
