--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -59,7 +59,8 @@
     "postcss": "^8.4.6",
     "stylelint": "14.5.1",
     "tailwindcss": "^3.0.23",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "weapp-tailwindcss-webpack-plugin": "^1.2.1"
   },
   "engines": {
     "node": ">=12.0.0"
