--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -59,6 +59,7 @@
     "stylelint": "9.3.0",
     "tailwindcss": "^3.0.21",
     "typescript": "^4.1.0",
-    "vue-loader": "^15.9.2"
+    "vue-loader": "^15.9.2",
+    "weapp-tailwindcss-webpack-plugin": "^1.2.1"
   }
 }
