--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -59,6 +59,7 @@
     "stylelint": "14.5.1",
     "tailwindcss": "^3.0.21",
     "typescript": "^4.1.0",
-    "vue-loader": "^17.0.0"
+    "vue-loader": "^17.0.0",
+    "weapp-tailwindcss-webpack-plugin": "^1.2.1"
   }
 }
