--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -74,9 +74,6 @@
     "vuex": "^3.2.0"
   },
   "devDependencies": {
-    "postcss": "7",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "autoprefixer": "9",
     "@babel/plugin-syntax-typescript": "^7.2.0",
     "@babel/runtime": "~7.12.0",
     "@dcloudio/types": "*",
@@ -94,17 +91,21 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-typescript": "*",
     "@vue/cli-service": "~4.5.0",
+    "autoprefixer": "9",
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
     "jest": "^25.4.0",
     "mini-types": "*",
     "miniprogram-api-typings": "*",
+    "postcss": "7",
     "postcss-comment": "^2.0.0",
     "postcss-rem-to-responsive-pixel": "^5.1.1",
     "sass": "^1.49.0",
     "sass-loader": "8",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "^3.0.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "weapp-tailwindcss-webpack-plugin": "^1.2.1"
   },
   "browserslist": [
     "Android >= 4.4",
