--- a/demo/web/package.json
+++ b/demo/web/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.15"
+    "tailwindcss": "^3.0.15",
+    "weapp-tailwindcss-webpack-plugin": "^1.2.1"
   }
 }
