--- a/package.json
+++ b/package.json
@@ -65,10 +65,11 @@
     "@types/webpack4": "npm:@types/webpack@4",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
+    "autoprefixer": "^10.4.4",
     "cross-env": "^7.0.3",
     "defu": "^6.0.0",
     "del": "^6.0.0",
-    "eslint": "8.11.0",
+    "eslint": "8.12.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-node": "11.1.0",
@@ -78,10 +79,12 @@
     "memfs": "^3.4.1",
     "postcss": "^8.4.12",
     "postcss-load-config": "^3.1.3",
+    "postcss-rem-to-responsive-pixel": "^5.1.1",
     "quick-lru": "^5.1.1",
     "rollup": "^2.70.1",
     "rollup-plugin-terser": "^7.0.2",
     "semver": "^7.3.5",
+    "simple-functional-loader": "^1.2.1",
     "tailwindcss": "^3.0.23",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.6.0",
