--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "memfs": "^3.4.1",
     "postcss": "^8.4.12",
     "postcss-load-config": "^3.1.3",
+    "postcss-loader": "^6.2.1",
     "postcss-rem-to-responsive-pixel": "^5.1.1",
     "quick-lru": "^5.1.1",
     "rollup": "^2.70.1",
