fix: toutiao varaibles + +

--- a/demo/uni-app-vue3-vite/src/manifest.json
+++ b/demo/uni-app-vue3-vite/src/manifest.json
@@ -63,6 +63,7 @@
     "usingComponents": true
   },
   "mp-toutiao": {
+    "appid": "tt157563c88a4ca8ca01",
     "usingComponents": true
   },
   "uniStatistics": {
