--- a/demo/web/package.json
+++ b/demo/web/package.json
@@ -2,7 +2,7 @@
   "name": "web",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev1": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
