--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -4,6 +4,7 @@
   "description": "Rax 无线跨端应用工程，使用 TypeScript。",
   "version": "0.1.0",
   "scripts": {
+    "dev": "npm run start",
     "start": "rax-app start",
     "build": "rax-app build",
     "eslint": "eslint --ext .js,.jsx,.tsx,.ts ./",
@@ -27,7 +28,7 @@
     "postcss": "^8.4.12",
     "postcss-rem-to-responsive-pixel": "^5.1.1",
     "prettier": "^2.6.2",
-    "rax-app": "^3.8.7",
+    "rax-app": "3.8.10",
     "stylelint": "^14.6.1",
     "tailwindcss": "^3.0.23",
     "weapp-tailwindcss-webpack-plugin": "^1.2.9"
