--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "description": "ge",
   "scripts": {
+    "dev": "npm run dev:weapp",
+    "build": "npm run build:weapp",
     "build:weapp": "taro build --type weapp",
     "build:swan": "taro build --type swan",
     "build:alipay": "taro build --type alipay",
