feat: commit codes

--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -88,7 +88,7 @@
     "@dcloudio/webpack-uni-pages-loader": "^2.0.1-33920220121003",
     "@types/tailwindcss": "^3.0.5",
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-typescript": "*",
+    "@vue/cli-plugin-typescript": "^4.5.17",
     "@vue/cli-service": "~4.5.0",
     "autoprefixer": "9",
     "babel-plugin-import": "^1.11.0",
@@ -100,7 +100,7 @@
     "postcss-comment": "^2.0.0",
     "postcss-rem-to-responsive-pixel": "^5.1.1",
     "sass": "^1.49.0",
-    "sass-loader": "8",
+    "sass-loader": "10",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "^3.0.0",
     "vue-template-compiler": "^2.6.11",
