--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "6.0.0",
     "execa": "5",
+    "html-parse-stringify": "^3.0.1",
     "jest": "^27.5.1",
     "memfs": "^3.4.1",
     "postcss": "^8.4.12",
