--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "html-parse-stringify": "^3.0.1",
     "jest": "^27.5.1",
     "memfs": "^3.4.1",
+    "parse5": "^7.0.0",
     "postcss": "^8.4.12",
     "postcss-load-config": "^3.1.3",
     "postcss-loader": "^6.2.1",
