--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weapp-tailwindcss-webpack-plugin",
-  "version": "1.3.2-beta.1",
+  "version": "1.3.2-beta.2",
   "description": "把tailwindcss jit引擎，带给小程序开发者们\nbring tailwindcss jit engine to our miniprogram developers!",
   "main": "dist/index.js",
   "types": "dist/types/index.d.ts",
@@ -21,8 +21,8 @@
   },
   "files": [
     "dist",
-    "postcss.js",
-    "replace.js"
+    "postcss.*",
+    "replace.*"
   ],
   "publishConfig": {
     "access": "public",
