feat: add exports unit test

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@rollup/plugin-node-resolve": "^13.2.1",
     "@rollup/plugin-typescript": "^8.3.2",
     "@tsconfig/recommended": "^1.0.1",
+    "@types/esm": "^3.2.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.24",
     "@types/semver": "^7.3.9",
@@ -93,6 +94,7 @@
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "6.0.0",
+    "esm": "^3.2.25",
     "execa": "5",
     "html-parse-stringify": "^3.0.1",
     "jest": "^27.5.1",
