--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -55,13 +55,13 @@
     "@dcloudio/uni-automator": "^3.0.0-alpha-3031120220216001",
     "@dcloudio/uni-cli-shared": "^3.0.0-alpha-3031120220216001",
     "@dcloudio/vite-plugin-uni": "^3.0.0-alpha-3031120220216001",
-    "autoprefixer": "^10.4.2",
+    "autoprefixer": "^10.4.5",
     "postcss": "^8.4.7",
     "postcss-rem-to-responsive-pixel": "^5.1.1",
     "sass": "^1.49.9",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.2",
     "vite": "^2.8.6",
-    "weapp-tailwindcss-webpack-plugin": "^1.3.2-beta.3"
+    "weapp-tailwindcss-webpack-plugin": "^1.3.3"
   }
 }
