--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -33,33 +33,34 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.17.2",
-    "@tarojs/cli": "3.4.1",
-    "@tarojs/components": "3.4.1",
-    "@tarojs/react": "3.4.1",
-    "@tarojs/runtime": "3.4.1",
-    "@tarojs/taro": "3.4.1",
+    "@tarojs/cli": "3.4.8",
+    "@tarojs/components": "3.4.8",
+    "@tarojs/react": "3.4.8",
+    "@tarojs/runtime": "3.4.8",
+    "@tarojs/taro": "3.4.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "taro-hooks": "1.5.3"
+    "taro-hooks": "1.5.8"
   },
   "devDependencies": {
     "@babel/core": "^7.17.4",
-    "@tarojs/mini-runner": "3.4.1",
-    "@tarojs/webpack-runner": "3.4.1",
+    "@tarojs/mini-runner": "3.4.8",
+    "@tarojs/plugin-framework-react": "^3.4.8",
+    "@tarojs/webpack-runner": "3.4.8",
     "@types/react": "^17.0.2",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "autoprefixer": "^10.4.2",
     "babel-plugin-import": "^1.13.3",
-    "babel-preset-taro": "3.4.1",
+    "babel-preset-taro": "3.4.8",
     "eslint": "^8.9.0",
-    "eslint-config-taro": "3.4.1",
+    "eslint-config-taro": "3.4.8",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^8.4.6",
-    "stylelint": "14.5.1",
+    "stylelint": "14.8.0",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.2.3",
     "weapp-tailwindcss-webpack-plugin": "^1.2.1"
