--- a/package.json
+++ b/package.json
@@ -70,29 +70,29 @@
     "@babel/types": "^7.17.0",
     "@icebreakers/wxml": "^1.0.1",
     "@rollup/plugin-alias": "^3.1.8",
-    "@rollup/plugin-commonjs": "^21.1.0",
+    "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.2.1",
     "@rollup/plugin-typescript": "^8.3.2",
     "@tsconfig/recommended": "^1.0.1",
     "@types/esm": "^3.2.0",
     "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.24",
+    "@types/node": "^17.0.29",
     "@types/semver": "^7.3.9",
     "@types/tailwindcss": "^3.0.9",
     "@types/webpack": "^5.28.0",
     "@types/webpack-sources": "^3.2.0",
     "@types/webpack4": "npm:@types/webpack@4",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "autoprefixer": "^10.4.4",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "autoprefixer": "^10.4.5",
     "cross-env": "^7.0.3",
     "defu": "^6.0.0",
     "del": "^6.0.0",
-    "eslint": "8.13.0",
-    "eslint-config-standard": "^16.0.3",
+    "eslint": "8.14.0",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-n": "^15.2.0",
     "eslint-plugin-promise": "6.0.0",
     "esm": "^3.2.25",
     "execa": "5",
@@ -112,11 +112,11 @@
     "tailwindcss": "^3.0.24",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.6.0",
-    "tslib": "^2.3.1",
+    "tslib": "^2.4.0",
     "ttypescript": "^1.5.13",
     "typescript": "^4.6.3",
     "typescript-transform-paths": "^3.3.1",
-    "vite": "^2.9.5",
+    "vite": "^2.9.6",
     "webpack": "^5.70.0",
     "webpack4": "npm:webpack@webpack-4"
   },
