--- a/package.json
+++ b/package.json
@@ -113,8 +113,7 @@
     "typescript-transform-paths": "^3.3.1",
     "vite": "^2.9.6",
     "webpack": "^5.70.0",
-    "webpack4": "npm:webpack@webpack-4",
-    "wxml-ast": "^0.1.1"
+    "webpack4": "npm:webpack@webpack-4"
   },
   "dependencies": {
     "@babel/generator": "7.17.9",
