--- a/package.json
+++ b/package.json
@@ -77,18 +77,21 @@
     "@types/esm": "^3.2.0",
     "@types/jest": "^27.5.1",
     "@types/loader-utils": "^2.0.3",
-    "@types/node": "^17.0.29",
+    "@types/node": "^17.0.38",
     "@types/tailwindcss": "^3.0.9",
     "@types/webpack": "^5.28.0",
     "@types/webpack-sources": "^3.2.0",
     "@types/webpack4": "npm:@types/webpack@4",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "@vue/compiler-core": "^3.2.36",
+    "@vue/compiler-dom": "^3.2.36",
+    "@vue/compiler-sfc": "^3.2.36",
     "autoprefixer": "^10.4.5",
     "cross-env": "^7.0.3",
     "defu": "^6.0.0",
-    "del": "^6.0.0",
-    "eslint": "8.15.0",
+    "del": "^6.1.1",
+    "eslint": "8.16.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-n": "^15.2.0",
@@ -96,21 +99,21 @@
     "esm": "^3.2.25",
     "execa": "5",
     "jest": "^27.5.1",
-    "memfs": "^3.4.1",
-    "postcss": "^8.4.12",
-    "postcss-load-config": "^3.1.3",
-    "postcss-loader": "^6.2.1",
+    "memfs": "^3.4.4",
+    "postcss": "^8.4.14",
+    "postcss-load-config": "^4.0.1",
+    "postcss-loader": "^7.0.0",
     "postcss-rem-to-responsive-pixel": "^5.1.1",
     "prettier": "^2.6.2",
-    "rollup": "^2.70.2",
+    "rollup": "^2.75.4",
     "rollup-plugin-terser": "^7.0.2",
     "simple-functional-loader": "^1.2.1",
     "tailwindcss": "^3.0.24",
     "ts-jest": "^27.1.4",
-    "ts-node": "^10.6.0",
+    "ts-node": "^10.8.0",
     "tslib": "^2.4.0",
     "ttypescript": "^1.5.13",
-    "typescript": "^4.6.3",
+    "typescript": "^4.7.2",
     "typescript-transform-paths": "^3.3.1",
     "vite": "^2.9.6",
     "webpack": "^5.70.0",
@@ -120,7 +123,7 @@
     "@babel/generator": "7.17.9",
     "@babel/parser": "7.17.9",
     "@babel/traverse": "7.17.9",
-    "webpack-sources": "^3.2.3",
-    "loader-utils": "^2.0.2"
+    "loader-utils": "^2.0.2",
+    "webpack-sources": "^3.2.3"
   }
 }
