chore: remove deps and log change

--- a/demo/remax-app/project.config.json
+++ b/demo/remax-app/project.config.json
@@ -36,11 +36,23 @@
     "disableUseStrict": false,
     "minifyWXML": true,
     "showES6CompileOption": false,
-    "useCompilerPlugins": false
+    "useCompilerPlugins": false,
+    "useStaticServer": true
   },
   "compileType": "miniprogram",
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
   "projectname": "remax-app",
-  "condition": {}
+  "condition": {},
+  "libVersion": "2.24.5",
+  "srcMiniprogramRoot": "dist/wechat/",
+  "packOptions": {
+    "ignore": [],
+    "include": []
+  },
+  "editorSetting": {
+    "tabIndent": "insertSpaces",
+    "tabSize": 2
+  },
+  "description": "项目配置文件，详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html"
 }
