--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -62,6 +62,6 @@
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.2",
     "vite": "^2.8.6",
-    "weapp-tailwindcss-webpack-plugin": "^1.4.4"
+    "weapp-tailwindcss-webpack-plugin": "^1.6.0-beta.0"
   }
 }
