--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -3,5 +3,6 @@
   "compilerOptions": {
     "rootDir": "src"
   },
-  "include": ["src/**/*", "types/**/*"]
+  "include": ["src/**/*", "types/**/*"],
+  "exclude": ["dist", "node_modules", "test/types", "./*.d.ts"]
 }
