--- a/tsconfig.dts.json
+++ b/tsconfig.dts.json
@@ -3,5 +3,6 @@
   "compilerOptions": {
     "declaration": true,
     "declarationDir": "dist/types"
-  }
+  },
+  "exclude": ["dist", "node_modules", "test/types", "./*.d.ts"]
 }
