--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weapp-tailwindcss-webpack-plugin",
-  "version": "1.6.2-beta.0",
+  "version": "1.6.2",
   "description": "把tailwindcss jit引擎，带给小程序开发者们\nbring tailwindcss jit engine to our miniprogram developers!",
   "main": "dist/index.js",
   "types": "dist/types/index.d.ts",
@@ -120,6 +120,7 @@
     "tailwindcss": "^3.0.24",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.8.0",
+    "tsd": "^0.20.0",
     "tslib": "^2.4.0",
     "ttypescript": "^1.5.13",
     "typescript": "^4.7.2",
