--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weapp-tailwindcss-webpack-plugin",
-  "version": "1.6.4",
+  "version": "1.6.5-beta.0",
   "description": "把tailwindcss jit引擎，带给小程序开发者们\nbring tailwindcss jit engine to our miniprogram developers!",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -26,9 +26,10 @@
   },
   "scripts": {
     "dev": "yarn clean && yarn dts && cross-env NODE_ENV=development rollup -cw",
-    "build": "yarn clean && cross-env NODE_ENV=production rollup -c && yarn dts",
+    "build": "yarn clean && cross-env NODE_ENV=production rollup -c && yarn dts && yarn fix-dts",
     "build:tsc": "cross-env NODE_ENV=development tsc --build tsconfig.json",
     "dts": "ttsc --emitDeclarationOnly -p tsconfig.dts.json",
+    "fix-dts": "node scripts/fix-dts.js",
     "test": "jest",
     "init:rename": "node scripts/init/rename.js",
     "clean": "node scripts/clean.js",
