feat: commit dark mode

--- a/demo/uni-app-vue3-vite/src/manifest.json
+++ b/demo/uni-app-vue3-vite/src/manifest.json
@@ -54,7 +54,8 @@
     "setting": {
       "urlCheck": false
     },
-    "usingComponents": true
+    "usingComponents": true,
+    "darkmode": true
   },
   "mp-alipay": {
     "usingComponents": true
