--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -77,6 +77,7 @@
     "vue-router": "^3.1.3",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
+    "weapp-tailwindcss-test-components": "link:@icebreakers\\weapp-tailwindcss-test-components",
     "weapp-tailwindcss-webpack-plugin": "^1.6.7",
     "webpack": "^5.43.0",
     "webpack-bundle-analyzer": "^4.5.0",
