--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -31,6 +31,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
     "@gfez/eslint-config-wechat-miniprogram": "^1.0.1",
+    "@icebreakers/weapp-tailwindcss-test-components": "^0.0.1",
     "@types/lodash": "^4.14.180",
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.4",
