--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -104,7 +104,7 @@
     "speed-measure-webpack-plugin": "^1.5.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "typescript": "^4.6.3",
+    "typescript": "~4.0.0",
     "vue-template-compiler": "^2.6.11",
     "weapp-tailwindcss-webpack-plugin": "^1.6.7"
   },
